Add a POC for a writer bridge.